--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-requests==2.31.0
-python-dotenv==1.0.0
-pydantic==2.5.0
+requests==2.32.3
+python-dotenv==1.0.1
+pydantic==2.9.2
 psycopg2-binary==2.9.9
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 ollama==0.6.0
-langchain==0.3.27
-langchain-ollama==0.3.8
+langchain==1.0.0a15
+langchain-ollama==0.3.10
+langchain-openai==1.0.0a4
